refactor: add ClickHouse debugging, SQL injection protection, and documentation improvements
**CI Changes:**
- Add failure debug step to show ClickHouse container directories, binaries, logs, and config files

**Documentation Updates:**
- Add ClickHouse emoji to ENGINES.md supported engines table
- Update FEATURE.md checklist to include README --engine help text and ENGINES.md emoji table
- Update README.md --engine option to include clickhouse in supported engines list
- Expand clickhouse dependency

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -597,6 +597,21 @@ jobs:
         run: pnpm test:clickhouse
         timeout-minutes: 15
 
+      - name: Show ClickHouse logs on failure
+        if: failure()
+        run: |
+          echo "=== ClickHouse container directories ==="
+          ls -la ~/.spindb/containers/clickhouse/ 2>/dev/null || echo "No ClickHouse containers directory"
+          echo ""
+          echo "=== ClickHouse binary directory ==="
+          ls -la ~/.spindb/bin/ 2>/dev/null | grep -i clickhouse || echo "No ClickHouse binaries found"
+          echo ""
+          echo "=== ClickHouse log files ==="
+          find ~/.spindb/containers/clickhouse -name "*.log" -exec echo "--- {} ---" \; -exec cat {} \; 2>/dev/null || echo "No log files found"
+          echo ""
+          echo "=== ClickHouse config files ==="
+          find ~/.spindb/containers/clickhouse -name "*.xml" -exec echo "--- {} ---" \; -exec cat {} \; 2>/dev/null || echo "No config files found"
+
   # ============================================
   # CLI End-to-End Tests (PostgreSQL + SQLite)
   # ============================================
