fix: CodeRabbit review - security hardening, platform guards, and bug fixes
SQL injection defense-in-depth for PostgreSQL/MySQL/MariaDB createUser,
CouchDB user update error handling, Qdrant YAML validation and restart
warning, FerretDB macOS-only pg_config fixups, TypeDB restore baseName
suffix stripping, version validator null return, console path fallback,
IPv6 connection string validation, ClickHouse chmod logging, and
CockroachDB createUser password regression fix.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1621,7 +1621,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
-      max-parallel: 4 # Limit parallel jobs to reduce Windows runner contention
+      max-parallel: 4 # Limit parallel jobs to reduce runner contention
       matrix:
         include:
           - os: ubuntu-22.04
